Start using paths; less dead code